--- a/Registration.html
+++ b/Registration.html
@@ -274,9 +274,9 @@
                 <td>
                     Drawing
                     <input type="checkbox" name="Hobby_Drawing" value="Drawing" />
-                    Singing
+                    Reciting
                     <input type="checkbox" name="Hobby_Singing" value="Singing" />
-                    Dancing
+                     Reading
                     <input type="checkbox" name="Hobby_Dancing" value="Dancing" />
                     Sketching
                     <input type="checkbox" name="Hobby_Cooking" value="Cooking" />
